--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ img {
 }
 
 .container {
-  width: 1158px;
+  max-width: 1158px;
   margin: 0 auto;
   padding: 0 15px;
 }
@@ -1041,4 +1041,53 @@ input:checked + .names-label span:first-child {
 
 #user-name:focus + .name-icon-person {
   fill: #4d5ae5;
+}
+
+/* Button classes mobile */
+
+/* Section 1 mobile */
+
+@media screen and (width <= 428px) {
+  .header-navbar-menu {
+    display: none;
+  }
+
+  .address {
+    display: none;
+  }
+
+  .header-container {
+    height: 70px;
+  }
+
+  .header-content {
+    padding-top: 25px;
+  }
+
+  .hero-title {
+    color: var(--white-background-color);
+    text-align: center;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 111.111%;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+  }
+
+  .we-offer-div-icon {
+    display: none;
+  }
+
+  .we-offer-section-list {
+    display: inline;
+  }
+
+  .our-work-list {
+    display: inline;
+  }
+
+  .our-team-list {
+    display: inline;
+  }
 }
