--- a/css/styles.css
+++ b/css/styles.css
@@ -1090,4 +1090,53 @@ input:checked + .names-label span:first-child {
   .our-team-list {
     display: inline;
   }
+
+  .our-team-element {
+    /* flex-basis: calc((100% - 72px) / 4); */
+    width: fit-content;
+    gap: 72px;
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+      0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+      0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  }
+
+  .container {
+    max-width: 428px;
+    flex-wrap: wrap;
+  }
+
+  .our-work-element {
+    max-width: 428px;
+  }
+
+  .customers-section-icon {
+    display: flex;
+    /* flex-direction: column; */
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 24px;
+  }
+
+  .footer-div {
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+  }
+
+  .footer-form-div {
+    display: flex;
+    flex-direction: column;
+    /* flex-wrap: wrap; */
+    position: relative;
+    margin-right: 0;
+    margin-left: 80px;
+  }
+
+  .footer-logo-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
