--- a/css/styles.css
+++ b/css/styles.css
@@ -173,6 +173,10 @@ img {
   color: var(--pressed-state-color);
 }
 
+.ham-menu-div {
+  display: none;
+}
+
 .hero-background {
   background-color: var(--hero-background-color);
   max-width: 1440px;
@@ -474,23 +478,19 @@ img {
   height: 88px;
 }
 
-.footer-background {
-  background-color: var(--dark-color);
-}
-
 .footer-container {
+  background-color: var(--dark-color);
   padding: 100px 0;
 }
 
 .footer-div {
   display: flex;
   align-items: baseline;
-  display: flex;
-  align-items: baseline;
 }
 
 .footer-social-media-div {
   margin-right: 120px;
+  /* width: 100%; */
 }
 
 .footer-social-media-p {
@@ -566,8 +566,12 @@ img {
 }
 
 .footer-form-div {
-  position: relative;
+  /* display: flex;
+  flex-direction: column;
+
   margin-right: 0;
+  margin-left: 80px;
+  flex-wrap: wrap; */
   margin-left: 80px;
 }
 
@@ -582,72 +586,52 @@ img {
 }
 
 .footer-form-form {
-  width: 264px;
-  height: 40px;
-  border-radius: 4px;
-  border: 1px solid var(--white-background-color);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   display: flex;
-  flex-direction: row;
-  position: absolute;
   gap: 24px;
 }
 
 .footer-form-label {
-  color: var(--WHITE, #fff);
-  width: 264px;
-  height: 40px;
-  font-family: "Roboto", sans-serif;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 200%;
-  letter-spacing: 0.48px;
-  position: absolute;
 }
 
 .footer-form-input {
-  border: none;
-  outline: none;
-  background: none;
   width: 264px;
   height: 40px;
-  border: 1px solid #ffffff;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid #fff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  padding-left: 16px;
+  font-size: 12px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  padding-left: 16px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
   color: #ffffff;
 }
 
 .footer-form-button {
+  display: flex;
+  background-color: #4d5ae5;
+  color: #ffffff;
   display: inline-flex;
   padding: 8px 24px;
   justify-content: center;
   align-items: center;
+  gap: 16px;
   min-width: 165px;
   height: 40px;
-  border-radius: 4px;
-  background: var(--primary-brand-color);
   cursor: pointer;
-  border: none;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-left: 284px;
-  font-size: 16px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 150%;
-  letter-spacing: 0.64px;
-  color: #ffffff;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  border: none;
+  border-radius: 4px;
 }
 
 .footer-form-svg {
   fill: white;
-  margin-left: 16px;
+  /* margin-left: 16px; */
+}
+
+.footer-form-svg-use {
 }
 
 .list {
@@ -1056,12 +1040,21 @@ input:checked + .names-label span:first-child {
     display: none;
   }
 
-  .header-container {
+  /* .header-container {
     height: 70px;
-  }
+  } */
 
   .header-content {
-    padding-top: 25px;
+    padding: 25px 16px;
+  }
+
+  /* .header-navbar {
+    display: none;
+  } */
+
+  .ham-menu-svg {
+    cursor: pointer;
+    gap: 56px;
   }
 
   .hero-title {
@@ -1118,25 +1111,55 @@ input:checked + .names-label span:first-child {
     gap: 24px;
   }
 
-  .footer-div {
+  .footer-container {
     display: flex;
-    align-items: baseline;
-    flex-wrap: wrap;
+    padding: 96px 0px;
+  }
+
+  .footer-div {
+    align-items: center;
+    flex-direction: column;
   }
 
   .footer-form-div {
-    display: flex;
-    flex-direction: column;
-    /* flex-wrap: wrap; */
-    position: relative;
-    margin-right: 0;
-    margin-left: 80px;
+    margin-left: 0;
+  }
+
+  .footer-form-p {
+    padding-top: 72px;
+    text-align: center;
   }
 
   .footer-logo-div {
+    text-align: center;
+    margin: 0;
+  }
+
+  .footer-social-media-div {
+    margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
   }
+
+  .footer-form-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer-form-button {
+    max-width: 165px;
+  }
+
+  .footer-content {
+    padding-top: 16px;
+  }
+
+  .footer-form-input {
+    min-width: 398px;
+  }
+}
+
+@media screen and (428px <= width <= 768px) {
 }
